--- a/project/app/config/parameters.yml.dist
+++ b/project/app/config/parameters.yml.dist
@@ -6,6 +6,11 @@ parameters:
     database_name:     symfony
     database_user:     root
     database_password: ~
+    database_ocarat_host: 127.0.0.1
+    database_ocarat_port: null
+    database_ocarat_name: pilot
+    database_ocarat_user: pilot
+    database_ocarat_password: 123
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
@@ -14,7 +19,7 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
+    locale:            fr
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
