--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -3,3 +3,7 @@ ocarat_core:
     type:     annotation
     prefix:   /
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+
