--- a/project/app/config/config.yml
+++ b/project/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -24,6 +24,14 @@ framework:
     fragments:       ~
     http_method_override: true
 
+fos_user:
+    db_driver:      orm # can be orm or odm
+    firewall_name:  main
+    user_class:     Ocarat\UserBundle\Entity\User
+    from_email:
+        address:        mkt@ocarat.net
+        sender_name:    Ocarat pilot
+
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
@@ -33,7 +41,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ "OcaratCoreBundle" ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -46,6 +54,8 @@ assetic:
 doctrine:
     dbal:
         default_connection:   default
+        types:
+          json: Sonata\Doctrine\Types\JsonType
         connections:
           default:
             driver:   "%database_driver%"
@@ -57,13 +67,12 @@ doctrine:
             charset:  UTF8
           site:
             driver:   "%database_driver%"
-            host:     "%database_host2%"
-            port:     "%database_port2%"
-            dbname:   "%database_name2%"
-            user:     "%database_user2%"
-            password: "%database_password2%"
+            host:     "%database_ocarat_host%"
+            port:     "%database_ocarat_port%"
+            dbname:   "%database_ocarat_name%"
+            user:     "%database_ocarat_user%"
+            password: "%database_ocarat_password%"
             charset:  UTF8
-
     orm:
         default_entity_manager:   default
         entity_managers:
@@ -71,6 +80,8 @@ doctrine:
                 connection:       default
                 mappings:
                   OcaratCoreBundle: ~
+                  OcaratUserBundle: ~
+                  FOSUserBundle: ~
             site:
                 connection:       site
         auto_generate_proxy_classes: "%kernel.debug%"
@@ -85,9 +96,25 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+jms_translation:
+    configs:
+        app:
+            dirs: [%kernel.root_dir%, %kernel.root_dir%/../src]
+            output_dir: %kernel.root_dir%/Resources/translations
+            ignored_domains: [routes]
+            excluded_names: ["*TestCase.php", "*Test.php"]
+            excluded_dirs: [cache, data, logs]
+            extractors: [alias_of_the_extractor]
+
 services:
-    doctrine.orm.entity_manager_ocarat:
-        class: %doctrine.orm.entity_manager.class%
-        factory_service:  doctrine
-        factory_method:   getManager
-        arguments: ["site"]
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
+    twig.text_extension:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - name: twig.extension
+    ocarat.user.roles:
+       class: Ocarat\CoreBundle\Service\RoleHelper
+       arguments: ['%security.role_hierarchy.roles%']
