--- a/project/composer.json
+++ b/project/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.5.*",
+        "symfony/symfony": "2.6.*",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
@@ -18,7 +18,14 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "google/apiclient": "1.1.*@dev"
+        "google/apiclient": "1.1.*@dev",
+        "sonata-project/user-bundle": "^2.2",
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+        "friendsofsymfony/user-bundle": "1.3.5",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "jms/translation-bundle": "dev-master",
+        "jms/di-extra-bundle": "dev-master",
+        "egeloen/ordered-form-bundle": "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
