--- a/project/src/Ocarat/CoreBundle/Resources/config/services.yml
+++ b/project/src/Ocarat/CoreBundle/Resources/config/services.yml
@@ -10,3 +10,6 @@ services:
     ocarat_core.legacyManager:
         class: Ocarat\CoreBundle\Service\LegacyManager
         arguments: ["@doctrine"]
+    ocarat.product.search.manager:
+         class: Ocarat\CoreBundle\Service\ProductSearchManager
+         arguments: ["@doctrine"]
