--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -6,4 +6,7 @@ ocarat_core:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
 
