--- a/project/composer.json
+++ b/project/composer.json
@@ -25,7 +25,9 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "jms/translation-bundle": "dev-master",
         "jms/di-extra-bundle": "dev-master",
-        "egeloen/ordered-form-bundle": "~1.0"
+        "egeloen/ordered-form-bundle": "~1.0",
+        "leaseweb/memcache-bundle": "*",
+        "friendsofsymfony/jsrouting-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
